可新增舊活動

--- a/src/main/resources/templates/login/access-denied.html
+++ b/src/main/resources/templates/login/access-denied.html
@@ -44,7 +44,7 @@
 
 	<!-- 底部平台介紹================================================================ -->
 
-	<div th:replace="footer::footer"></div>
+	<!-- <div th:replace="footer::footer"></div> -->
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
