--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -7,15 +7,17 @@
 		<footer>
 			<div class="container">
 				<div class="col-sm-1">
-					<img th:src="@{/images/ball.png}" class="img-responsive">
+					<img th:src="@{/images/ball.png}" width="100%">
 				</div>
-				<div class="col-sm-4">
-					<h5 class="footer_introduce">© CHIA-CHI. 版權所有 轉載必究・</h5>
+				<div class="col-sm-1"></div>
+				<div class="col-sm-3">
+					<h5 class="footer_introduce">© 版權所有 轉載必究・</h5>
 				</div>
 				<div class="col-sm-3">
-					<h5 class="footer_introduce">網站客服: j43343@gmail.com</h5>
+					<h5 class="footer_introduce">網站開發: JENNY HSU</h5>
 				</div>
 				<div class="col-sm-3">
+				    <h5 class="footer_introduce">信箱: j43343@gmail.com</h5>
 				</div>
 			</div>
 		</footer>
