--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -14,7 +14,7 @@
 					<h5 class="footer_introduce">© 版權所有 轉載必究・</h5>
 				</div>
 				<div class="col-sm-3">
-					<h5 class="footer_introduce">網站開發: JENNY HSU</h5>
+					<h5 class="footer_introduce">系統開發: JENNY HSU</h5>
 				</div>
 				<div class="col-sm-3">
 				    <h5 class="footer_introduce">信箱: j43343@gmail.com</h5>
