加上回首頁連結

--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -62,7 +62,8 @@
 
         <button type="submit" class="btn">登入</button>
         <a class="btn" th:href="@{/register}">註冊</a>
-        <a th:href="@{/forgotPage}">忘記密碼</a>
+        <a th:href="@{/forgotPage}">忘記密碼</a>&nbsp;&nbsp;
+        <a th:href="@{/}">回到活動網站</a>
 
         <!-- <form:form....的標籤spring MVC 自動增加 CSRF token -->
         <!-- 若不是用springMVC需要加上csrf token，否則出現403錯誤 -->
